2nd Progress Check
HTML/CSS: Started on changing the header and body to make it fit inside the desktop window, then had to fix a bunch of text alignments on the footer and everywhere else. Started on the top news html site.

JS: Started with a variable, may continue to add more to the function of the website.

JAVA: May be added to store information and create a algorithm that caters to viewer's preferences based on view history.

--- a/designersworkshop.html
+++ b/designersworkshop.html
@@ -72,5 +72,29 @@
     <section id="Welcome">
         <h1></h1>
     </section>
+    <footer>
+        <nav id="footing">
+            <div id="First-Column">
+                <img src="Assets/Logo/Primary Logo.png" alt="">
+                <h2><a href="index (homepage).html">World of Fashion</a></h2>
+                <h3>Copyright ©️ 2024 World of Fashion Broadcasting Inc.</h3>
+                <br>
+            </div>
+            <div id="Second-Column">
+                <a href=""><p>Photo Commissions</p></a>
+                <a href=""><p>Contact Us</p></a>
+                <a href=""><p>Your Profile</p></a>
+                <a href=""><p>Terms of Use</p></a>
+                <a href=""><p>Directory</p></a>
+            </div>
+            <div id="Third-Column">
+                <a href=""><p>View History Settings</p></a>
+                <a href=""><p>Privacy Policy</p></a>
+                <a href=""><p>Content Filter Settings</p></a>
+                <a href=""><p>Cookies Policy</p></a>
+                <a href=""><p>Accessibility Controls</p></a>
+            </div>
+        </nav>
+    </footer>
 </body>
 </html>
