--- a/topnews.html
+++ b/topnews.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <script src="Functionality/functionality.js"></script>
 </head>
 <header>
     <div class="UpperTitle">
         <img class="Logo-Image" src="Assets/Logo/Primary Logo.png">
         <h1 class="MainTitle"><a href="index (homepage).html">World of Fashion</a></h1>
     </div>
-    <div class="TopNav">
+    <div id="TopNav">
         <nav>
             <menu id="top-menu">
                 <li class="dropdown">
@@ -68,10 +69,73 @@
         </nav>
     </div>
 </header>
-<header id="top-news-title">
-
-</header>
 <body>
-    
+    <article id="Cascade">
+        <section id="Top-Two">
+            <h1 id="top-news-title">Top News Stories</h1>
+            <section class="Block">
+            <article id="text-noteA">
+                <!---->
+                <img src="" alt="TTT">
+                <article class="Terminal">
+                <p>IN FASHION</p>
+                <h4>What is the 2025 Met Gala theme that we will see in the exhibition and the red carpet for next year?</h4>
+                </article>
+            </article>
+            <article id="text-noteB">
+                <!---->
+                <img src="" alt="TTT">
+                <article class="Terminal">
+                <p>HIGHLIGHTS '24</p>
+                <h4>What are the new trends for this New York Fashion Week in Fall 2024?</h4>
+                </article>
+            </article>
+            </section>
+        </section>
+        <br>
+        <section id="Bottom-Four">
+            <!---->
+        </section>
+        <br>
+        <section id="For-You">
+            <h1 id="for-you-title">For You</h1>
+            <article>
+                <!---->
+            </article>
+        </section>
+        <br>
+        <section id="Podcast">
+            <h1 id="todays-podcast-title">Today's Podcast</h1>
+            <article>
+                <!---->
+            </article>
+        </section>
+    </article>
+    <footer>
+        <nav id="footing">
+            <div id="First-Column">
+                <img src="Assets/Logo/Primary Logo.png" alt="">
+                <h2><a href="index (homepage).html">World of Fashion</a></h2>
+                <h3>Copyright ©️ 2024 World of Fashion Broadcasting Inc.</h3>
+                <br>
+            </div>
+            <section class="Important-Info">
+            <div id="Second-Column">
+                <a href=""><p>Photo Commissions</p></a>
+                <a href=""><p>Contact Us</p></a>
+                <a href=""><p>Your Profile</p></a>
+                <a href=""><p>Terms of Use</p></a>
+                <a href=""><p>Directory</p></a>
+            </div>
+            <div id="Third-Column">
+                <a href=""><p>View History Settings</p></a>
+                <a href=""><p>Privacy Policy</p></a>
+                <a href=""><p>Content Filter Settings</p></a>
+                <a href=""><p>Cookies Policy</p></a>
+                <a href=""><p>Accessibility Controls</p></a>
+            </div>
+            </section>
+        </nav>
+    </footer>
 </body>
 </html>
