--- a/index (homepage).html
+++ b/index (homepage).html
@@ -20,6 +20,9 @@
     <div id="TopNav">
         <nav>
             <menu id="top-menu">
+                <li id="HamburgerDropdown">
+                    <a href=""><img src="Assets/MobileImages/menu-list-1527-svgrepo-com.svg" alt=""></a>
+                </li>
                 <li class="dropdown">
                     <button>About Us</button>
                     <menu class="dropdown-node">
@@ -60,8 +63,8 @@
                         <li><a href="">Tutorials</a></li>
                     </menu>
                 </li>
-                <li>
-                    <a class="profile" href=""><svg width="60" height="40" viewBox="0 0 72 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li id="account">
+                    <a class="profile" href="#login-form" rel="modal:open"><svg width="60" height="40" viewBox="0 0 72 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M36.015 34.8962C36.8434 34.8879 37.5082 34.2096 37.4999 33.3812C37.4916 32.5528 36.8134 31.888 35.985 31.8963L36.015 34.8962ZM6.61689 63.7926C8.11681 63.8076 8.11681 63.8082 8.1168 63.8087C8.1168 63.8087 8.1168 63.809 8.1168 63.8091C8.11679 63.8091 8.1168 63.8087 8.11681 63.8078C8.11684 63.8061 8.11689 63.8026 8.11698 63.7973C8.11717 63.7867 8.11752 63.769 8.11815 63.7446C8.1194 63.6956 8.12175 63.6194 8.12604 63.5176C8.13463 63.3141 8.151 63.0089 8.18199 62.6165C8.244 61.8312 8.36431 60.6994 8.597 59.3366C9.06357 56.6039 9.97571 52.9796 11.7495 49.3644C13.5211 45.7536 16.1354 42.1849 19.9964 39.5002C23.8455 36.8238 29.0181 34.9663 36.015 34.8962L35.985 31.8963C28.4411 31.9719 22.6704 33.9868 18.2838 37.0371C13.909 40.079 10.9951 44.0912 9.0562 48.043C7.1194 51.9904 6.13856 55.9105 5.6398 58.8317C5.38982 60.2957 5.25937 61.5182 5.1913 62.3804C5.15724 62.8117 5.13873 63.1535 5.12871 63.3912C5.12369 63.51 5.12079 63.6028 5.11913 63.6678C5.1183 63.7003 5.11777 63.7259 5.11745 63.7442C5.11729 63.7534 5.11718 63.7608 5.1171 63.7664C5.11706 63.7691 5.11703 63.7715 5.11701 63.7733C5.117 63.7743 5.11699 63.7753 5.11698 63.7758C5.11697 63.7767 5.11696 63.7775 6.61689 63.7926Z" fill="black"/>
                         <path d="M35.985 34.8962C35.1566 34.8879 34.4918 34.2096 34.5001 33.3812C34.5084 32.5528 35.1866 31.888 36.015 31.8963L35.985 34.8962ZM65.3831 63.7926C63.8832 63.8076 63.8832 63.8082 63.8832 63.8087C63.8832 63.8087 63.8832 63.809 63.8832 63.8091C63.8832 63.8091 63.8832 63.8087 63.8832 63.8078C63.8832 63.8061 63.8831 63.8026 63.883 63.7973C63.8828 63.7867 63.8825 63.769 63.8819 63.7446C63.8806 63.6956 63.8783 63.6194 63.874 63.5176C63.8654 63.3141 63.849 63.0089 63.818 62.6165C63.756 61.8312 63.6357 60.6994 63.403 59.3366C62.9364 56.6039 62.0243 52.9796 60.2505 49.3644C58.4789 45.7536 55.8646 42.1849 52.0036 39.5002C48.1545 36.8238 42.9819 34.9663 35.985 34.8962L36.015 31.8963C43.5589 31.9719 49.3296 33.9868 53.7162 37.0371C58.091 40.079 61.0049 44.0912 62.9438 48.043C64.8806 51.9904 65.8614 55.9105 66.3602 58.8317C66.6102 60.2957 66.7406 61.5182 66.8087 62.3804C66.8428 62.8117 66.8613 63.1535 66.8713 63.3912C66.8763 63.51 66.8792 63.6028 66.8809 63.6678C66.8817 63.7003 66.8822 63.7259 66.8825 63.7442C66.8827 63.7534 66.8828 63.7608 66.8829 63.7664C66.8829 63.7691 66.883 63.7715 66.883 63.7733C66.883 63.7743 66.883 63.7753 66.883 63.7758C66.883 63.7767 66.883 63.7775 65.3831 63.7926Z" fill="black"/>
                         <circle cx="36" cy="15" r="13.5" stroke="black" stroke-width="3"/>
@@ -70,14 +73,34 @@
             </menu>
         </nav>
     </div>
+    <div class="NVS">
+        <section id="choose"></section>
+        <section id="secI" id="secII" id="secIII" id="secIV" id="secV" id="secVI" id="secVII" id="secVIII" id="secIX" id="secX" id="secXI" id="secXII" id="secXIII" id="secXIV" id="secXV"></section>
+    </div>
     <div class="fadeOnLoad">
         <img id="poster-photo" src="Assets/Images/yQFbJ5fCFECwTEccKxt3KY.jpg">
     </div>
     </header>
+    <main>
     <header id="WelcomeSec">
         <h1 class="PrimaryTitle">Welcome to World of Fashion</h1>
         <p class="Details">Welcome to the one source of all things fashion! Here you will find news for trending styles, runway highlights, and important insights of the industry from every state of the United States. We are committed to bringing you issues that are inclusive, impartial, and truthful to its form. </p>
     </header>
+    <form id="login-form" class="modal">
+        <h2>Login to Your Account</h2>
+        <br>
+        <div>
+            <label for="Username">Username</label>
+            <input type="username" id="Username" name="Username" autocomplete="username">
+            <br>
+            <br>
+            <label for="Password">Password</label>
+            <input type="password" id="Password" name="Password" autocomplete="current-password">
+            <br>
+            <br>
+            <input type="submit" value="Login" autocomplete="off">
+        </div>
+    </form>
     <section id="SearchSec">
         <h2 class="SearchTitle">Search for a State</h2>
         <search id="formation">
@@ -130,27 +153,27 @@
         </div>
         <article class="imgsection">
             <div class="imgsectionX1">
-                <li><a class="pictorial" href=""><img src="" alt="[Place Image Here]"></a></li>
+                <li><a class="pictorial" href=""><img src="Assets/ArticleImages/n3Wdg7Q-asset-mezzanine-16x9-c2urrUz.jpg" alt="[Place Image Here]"></a></li>
                 <li><p class="Namenote">[Place Name Here]</p></li>
             </div>
             <div class="imgsectionX2">
-                <li><a class="pictorial" href=""><img src="" alt="[Place Image Here]"></a></li>
+                <li><a class="pictorial" href=""><img src="Assets/ArticleImages/3ZPAW2F7CNEBJHUSPU6EFL4FU4.jpg" alt="[Place Image Here]"></a></li>
                 <li><p class="Namenote">[Place Name Here]</p></li>
             </div>
             <div class="imgsectionX3">
-                <li><a class="pictorial" href=""><img src="" alt="[Place Image Here]"></a></li>
+                <li><a class="pictorial" href=""><img src="Assets/ArticleImages/Louis-Vuittons-spring-2020-show.-vogue.jpg" alt="[Place Image Here]"></a></li>
                 <li><p class="Namenote">[Place Name Here]</p></li>
             </div>
             <div class="imgsectionX4">
-                <li><a class="pictorial" href=""><img src="" alt="[Place Image Here]"></a></li>
+                <li><a class="pictorial" href=""><img src="Assets/ArticleImages/Paris-Fashion-Week-101-scaled.jpeg" alt="[Place Image Here]"></a></li>
                 <li><p class="Namenote">[Place Name Here]</p></li>
             </div>
             <div class="imgsectionX5">
-                <li><a class="pictorial" href=""><img src="" alt="[Place Image Here]"></a></li>
+                <li><a class="pictorial" href=""><img src="Assets/ArticleImages/Fashion-Week-Dates.webp" alt="[Place Image Here]"></a></li>
                 <li><p class="Namenote">[Place Name Here]</p></li>
             </div>
             <div class="imgsectionX6">
-                <li><a class="pictorial" href=""><img src="" alt="[Place Image Here]"></a></li>
+                <li><a class="pictorial" href=""><img src="Assets/ArticleImages/fashion-week-milano-2020-1440x740-1.webp" alt="[Place Image Here]"></a></li>
                 <li><p class="Namenote">[Place Name Here]</p></li>
             </div>
         </article>
@@ -158,7 +181,7 @@
     <section id="Socials">
         <h2 data-aos="fade-right">Keep up with our updates on Social Media!</h2>
         <div class="imgsocials">
-            <img data-aos="fade-right" src="" alt="Recently Posted Images">
+            <img data-aos="fade-right" src="Assets/Images/A8E5C673-A1BB-4846-B2E2-034B99F8FDC3.jpeg" alt="Recently Posted Images">
             <div id="Button-Node">
             <a data-aos="fade-right" href="https://www.facebook.com/?_rdr"><img id="Facebook" src="Assets/Social-Media-Logos/facebook-logo-svgrepo-com.svg"><span>Facebook</span></a>
             <br>
@@ -168,12 +191,13 @@
             </div>
         </div>
     </section>
+    </main>
 <footer>
     <nav id="footing">
         <section id="First-Column">
             <img src="Assets/Logo/Primary Logo.png" alt="">
             <h2><a href="index (homepage).html">World of Fashion</a></h2>
-            <h3>Copyright ©️ 2024 World of Fashion Broadcasting Inc.</h3>
+            <h3 class="VToggleOne">Copyright ©️ 2024 World of Fashion Broadcasting Inc.</h3>
             <br>
         </section>
         <section class="Important-Info">
@@ -192,8 +216,17 @@
             <a href=""><p>Accessibility Controls</p></a>
         </div>
         </section>
+        <h3 class="VToggleTwo">Copyright ©️ 2024 World of Fashion Broadcasting Inc.</h3>
     </nav>
 </footer>
+
+    <!-- Remember to include jQuery :) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+
+    <!-- jQuery Modal -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+
 
     <!-- Splide -->
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
@@ -205,7 +238,7 @@
 
     <!-- This is for the Jquery and script with javascript section.-->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="Functionality/functionality.js"></script>
     <applet code="Passkey.class" width="200" height="200"></applet>
+    <script src="Functionality/functionality.js"></script>
 </body>
 </html>
